# BlueNinja_BLE_EXAMPLE

./: CMakeLists.txt
cmake/: CMSIS.cmake  RTE.cmake  TZ10xx_DFP.cmake  TZ10xx_DFP_BOOTLOADER.cmake  TZ10xx_DFP_DRIVER.cmake  TZ10xx_DFP_MIDDLEWARE.cmake  TZ10xx_DFP_STARTUP.cmake  arm-toolchain.cmake  win32-arm-toolchain.cmake
